2012-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/parse.c:  Internal implementation of a pseudocolumn
	(-3) that means "last column in input file".  I.e. if the input file has
	19 columns then column(-3) is treated as column(19). It might be nice to
	wrap this so that the user interface is something like column(LAST), but
	that remains to be done.

2012-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Truncate requested column number to maximum sane
	value. This prevents segfault on "plot $foo using 1 title column(12345)"

	* src/parse.c (parse_unary_expression):
	Collapse two operations PUSHC <pos-const> + UMINUS
	into a single operation PUSHC <neg-const>
	This saves both space and time when evaluating negative numbers, but the
	direct motivation is to make it easier to treat functions of a constant
	value as a special case.

2012-11-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (plotrequest):  Fix bug introduced by 2012-11-12 patch
	(failure to recognize nonparametric named variables).

	* src/graphics.c (boundary): Since the vertical height of each text
	element depends on the font it uses, temporarily set the font while 
	calculating the height of that element.  This can result in a different
	placement compared to previous versions when a non-default font is used.

	* demo/named_var.dem demo/rugplot.dem demo/all.dem demo/simple.dem:
	Add a unit test for the use of a nonparametric named variable;
	it would have caught the above named variable bug!
	Add a title to simple.dem illustrating the effect of font size on
	placement.  Add a rugplot demo.  Less screen output from fit demo.

2012-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Fix the hexadecimal format used to output RGB color

	* term/js/canvasmath.js:  Additional UTF-8 mathematical operators

	* term/canvas.trm:  Retain the initial font size for later use.